add search dropdown